syntax = "proto3";
package tracker_server;

option go_package = "github.com/codeBehindMe/LabAssistant/tracker_server";

message RegisteredLab{
  string name = 1;
  repeated string componentNames = 2;
}

message RegisterLabRequest {
  string name = 1;
}

message RegisterLabResponse{
  int32 code = 1;
}

message SuccessfulOperation{
  int32 code = 1;
}

message ServiceVersionResponse{
  string version = 1;
}

message EmptyRequest{};

service TrackerService{
  rpc GetServiceVersion(EmptyRequest) returns (ServiceVersionResponse){};
  rpc RegisterLabCreation(RegisterLabRequest) returns (RegisterLabResponse){};
  rpc GetRegisteredLabs(EmptyRequest) returns (stream RegisteredLab){};
}